Add one more projet, and titles.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<a href="#" class="icon fa-home"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://github.com/mackosx" class="icon fa-github"><span>Github</span></a>
+						<a href="https://github.com/mackosx" target="_blank" class="icon fa-github"><span>Github</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -51,10 +51,16 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>a platform for exchanging used textbooks</h3>
 											<a href="https://github.com/mackosx/uBooks" class="image fit" target="_blank"><img src="images/ubooks.png" alt="uBooks"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
+											<h3>a flexible learning module framework</h3>
 											<a href="https://github.com/mackosx/Jose-Cuervo" class="image fit" target="_blank"><img src="images/game-of-the-amazons.png" alt="Game of the Amazons AI"></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<h3>a bot that plays Game of the Amazons</h3>
+											<a href="https://github.com/mackosx/Learning-Module-Framework" class="image fit" target="_blank"><img src="images/rpg-zoom.PNG" alt="learning framework"></a>
 										</div>
 									</div>
 								</section>
@@ -95,7 +101,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Mackenzie Salloum 2018</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Mackenzie Salloum 2018</li><li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
 						</ul>
 					</div>
 
