Add COSC360 website to projects, add gitignore.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Welcome to my website!</h1>
-									<p>My name is Mackenzie Salloum, and I do software development! I am currently working at FreshGrade Education. I am passionate about problem-solving, helping others, and full-stack application development.</p>
+									<p>My name is Mackenzie Salloum, and I do software development! I am currently working at FreshGrade Education, and am completing my degree in Computer Science at UBC Okanagan. I am passionate about problem-solving, helping others, and full-stack application development.</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
@@ -55,13 +55,17 @@
 											<a href="https://github.com/mackosx/uBooks" class="image fit" target="_blank"><img src="images/ubooks.png" alt="uBooks"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<h3>a flexible learning module framework</h3>
+                      <h3>a bot that plays Game of the Amazons</h3>
 											<a href="https://github.com/mackosx/Jose-Cuervo" class="image fit" target="_blank"><img src="images/game-of-the-amazons.png" alt="Game of the Amazons AI"></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<h3>a bot that plays Game of the Amazons</h3>
+                      <h3>a flexible learning module framework</h3>
 											<a href="https://github.com/mackosx/Learning-Module-Framework" class="image fit" target="_blank"><img src="images/rpg-zoom.PNG" alt="learning framework"></a>
-										</div>
+                    </div>
+                    <div class="col-4 col-6-medium col-12-small">
+                      <h3>a forum for fashion discussions</h3>
+											<a href="https://github.com/mackosx/myFashionForum" class="image fit" target="_blank"><img src="images/myfashionforum.png" alt="learning framework"></a>
+                    </div>
 									</div>
 								</section>
 							</article>
@@ -93,7 +97,7 @@
 									</div>
 								</form>
 								<p>Or</p>
-								<p>Connect with me on <a href="https://www.linkedin.com/in/mackenzie-salloum" class="icon">LinkedIn</a></p>
+								<p>Connect with me on <a href="https://www.linkedin.com/in/mackenzie-salloum" target="_blank" class="icon">LinkedIn</a></p>
 							</article>
 
 					</div>
